# sudoku_solver

./: .gitignore  Cargo.toml  LICENSE  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
anstream/: all.html  enum.ColorChoice.html  fn.force_color.html  fn.stderr.html  fn.stdout.html  index.html  macro.eprint.html  macro.eprintln.html  macro.panic.html  macro.print.html  macro.println.html  struct.AutoStream.html  struct.Buffer.html  struct.StripStream.html  trait.Lockable.html  trait.RawStream.html
anstyle/: all.html  enum.AnsiColor.html  enum.Color.html  index.html  struct.Ansi256Color.html  struct.EffectIter.html  struct.Effects.html  struct.Reset.html  struct.RgbColor.html  (+1 more)
listener/: Cargo.toml  all.html  fn.handler.html  fn.main.html  index.html  sidebar-items.js
listener/requests/: enum.Command.html  enum.Request.html  enum.Response.html  fn.check_solutions.html  fn.count_solutions.html  fn.process_fpuzzles_data.html  fn.process_message.html  fn.process_message_helper.html  fn.true_candidates.html  index.html  sidebar-items.js  struct.Error.html  struct.LogicalCell.html
listener/src/: computing.rs  f_puzzles.rs  main.rs  requests.rs  types.rs
listener/types/: enum.Command.html  enum.Request.html  enum.Response.html  index.html  sidebar-items.js  struct.Error.html  struct.LogicalCell.html
sudoku_engine/: Cargo.toml  all.html  enum.SudokuErrors.html  fn.assign.html  fn.eliminate.html  fn.from_regions.html  fn.from_string.html  fn.solve.html  index.html  sidebar-items.js  struct.Board.html
sudoku_engine/src/: .board.rs.swp  board.rs  constraints.rs  lib.rs  types.rs
sudoku_engine/src/types/: board.rs  iter.rs
sudoku_engine/types/: enum.SudokuErrors.html  struct.Board.html
sudoku_engine/types/board/: enum.SudokuErrors.html  struct.Board.html
sudoku_solver/: Cargo.toml  all.html  enum.Command.html  enum.YyComputation.html  fn.main.html  fn.solve_file.html  fn.solve_helper.html  fn.solve_puzzle.html  fn.solve_yin_yang.html  index.html  sidebar-items.js  struct.Args.html
sudoku_solver/build_irregular/: constant.SUDOKU_COUNT.html  fn.build_irregular.html  fn.print_regions.html  index.html  sidebar-items.js  struct.Partition.html
sudoku_solver/data/: README.txt  hardest.txt  sudoku100.txt  sudoku1k.txt
sudoku_solver/src/: build_irregular.rs  main.rs
(+22961 files in other folders)
