[package]
name = "listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
f_puzzles = { path = "../f_puzzles" }
futures-util = "0.3"
lz-str = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.26", features = ["macros", "rt"] }
tokio-stream = "0.1.12"
tokio-util = "0.7"
warp = { version = "0.3", default-features = false, features = ["websocket"] }
