[package]
name = "sudoku_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "~1.0"
f_puzzles = { path = "../f_puzzles" }
itertools = "0.10.5"
rayon = "1.7"
tokio = { version = "1.26", features = ["sync"] }
tokio-util = "0.7"
