[package]
name = "sudoku_solver"
version = "0.1.0"
edition = "2021"
authors = ["Derek Gustafson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
sudoku_engine = { path = "../sudoku_engine" }
