[package]
name = "sudoku_solver"
version = "0.1.0"
edition = "2021"
authors = ["Derek Gustafson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
clap = { version = "4", features = ["derive"] }
tokio-util = "0.7"
solution_iter = { path = "../solution_iter" }
sudoku_engine = { path = "../sudoku_engine" }
yy_engine = { path = "../yy_engine" }
